src/css/layout.css
html {
    font-size: 16px;
    --size-xxl: 3rem;
    --size-xl: 2rem;
    --size-l: 1.8rem;
    --size-m: 1.5rem;
    --size-s: 1rem;
    --size-xs: 0.8rem;
    --size-xxs: 0.5rem;
}

#splash {
    display: flex;
    width: 100vw;
    height: 100vh;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

#splash img {
    max-width: 50vw;
    max-height: 50vh;
}

.header {
    width: 90%;
    margin: 0 auto;
    position: relative;
    padding: 0.5rem 0px;
    text-align: center;
}

.header h1 {
    font-size: var(--size-xl);
}

#language {
    position: absolute;
    top: 50%;
    right: var(--size-m);
    transform: translate(0, -50%);
    background-color: transparent;
}

#language img {
    vertical-align: middle;
    width: var(--size-m);
}

.footer {
    margin-top: 1rem;
    margin-bottom: 2rem;
    text-align: center;
}

button {
    border: none;
}

.banner {
    height: calc(var(--size-xs) * 2);
    line-height: calc(var(--size-xs) * 2);
}

.banner p {
    font-size: var(--size-xs);
}

.main {
    width: 95%;
    margin: 0px auto;
    text-align: center;
}

hr {
    width: 90%;
    margin: 0px auto;
    height: 2px;
    border: none;
}

.main .section {
    padding: var(--size-s) var(--size-xs);
}

.main .section h2 {
    font-size: var(--size-l)
}

.main .section h3 {
    font-size: var(--size-m);
}

.main .section h4 {
    font-size: calc(var(--size-m) * 0.8);
}

.main .section hr {
    width: 50%;
    margin: 0px auto;
    height: 1px;
    border: none;
}

input {
    border: none;
    text-align: center;
}

#bpm {
    width: 80%;
    font-size: var(--size-xxl)
}

#bpm-ctrl {
    margin: var(--size-xs) auto;
}

#bpm-ctrl ul {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
}

#bpm-ctrl ul li button {
    padding: var(--size-xxs);
    border-radius: 50%;
}

#bpm-ctrl ul li button img {
    vertical-align: middle;
    width: var(--size-l);
    height: var(--size-l);
}

#dot-list {
    display: flex;
    flex-direction: row;
    justify-content: center;
    gap: var(--size-xxs);
    margin-top: var(--size-m);
}

#dot-list li {
    width: var(--size-m);
    height: var(--size-m);
    border-radius: 50%;
}

#play {
    width: calc(var(--size-l) * 3);
    height: calc(var(--size-l) * 3);
    border-radius: 50%;
    font-size: var(--size-l)
}

#beats {
    width: 40%;
    font-size: var(--size-xl)
}

#beats-ctrl {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    margin: var(--size-xs) auto;
}

#beats-ctrl button {
    padding: var(--size-xxs);
    border-radius: 50%;
}

#beats-ctrl button img {
    vertical-align: middle;
    width: var(--size-l);
    height: var(--size-l);
}

#stress {
    width: calc(var(--size-m) * 2.5);
    height: calc(var(--size-m) * 2.5);
    margin-top: var(--size-xs);
    border-radius: 50%;
    font-size: var(--size-m);
}

#sub-box {
    width: 90%;
    margin: var(--size-s) auto 0 auto;
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: var(--size-s);
}

#sub-box .sub-row {
    display: flex;
    flex-direction: row;
}

#sub-box .sub-row .sub-item {
    height: var(--size-m);
    flex: 1;
}

#sub-box .sub-row .sub-item img {
    height: 100%;
}

#wave-list {
    display: flex;
    margin-top: var(--size-s);
    flex-direction: row;
    align-items: center;
    justify-content: center;
    gap: var(--size-s);
}

#wave-list .wave-item {
    padding: var(--size-xs);
    border-radius: 50%;
}

#wave-list li img {
    width: 2em;
    height: 2em;
    vertical-align: middle;
}


#network-disconnected p {
    margin-top: 10px;
}

.platform {
    padding-top: 5px;
}

.platform .download-list {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    margin-top: var(--size-s);
}

.platform .download-list .download {
    white-space: nowrap;
}

button.action {
    margin: 0px 5px;
    padding: 5px 10px;
    border-radius: 5px;
}

.footer .badges {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.footer .badge {
    margin: 0px 5px;
}

.footer .copyright {
    font-size: 0.8em;
}

